Update config file handling

--- a/Dropbox2BaiduPCS_sample.cfg
+++ b/Dropbox2BaiduPCS_sample.cfg
@@ -1,23 +1,23 @@
 [dropbox]
 #Your Dropbox app key
-db_app_key : ''
+db-app-key : ''
 #Your Dropbox app secret
-db_app_secret : ''
+db-app-secret : ''
 # A comma separated list of folder names which you wish to
 # ignore in your migration - paths including any of these
 # names will be skipped.  If you do not wish to ignore any
 # folders then leave this as an empty string ('').
-db_ignore_folders : ''
+db-ignore-folders : ''
 
 [baidu]
 #Your Baidu app key
-b_app_key : ''
+b-app-key : ''
 #Your Baidu app secret
-b_app_secret : ''
+b-app-secret : ''
 #Your Baidu app folder name
-b_folder : ''
+b-folder : ''
 
 [app]
 # Whether or not to persist tokens across uses (true/false)
 # if true you will have to retrieve tokens each time
-secure_mode = false
+secure-mode = false
